# rust-avatar-proxy

./: .gitignore  Cargo.toml  LICENSE
src/: bootstrap.rs  main.rs
src/libs/: gravatar.rs  mod.rs
src/server/: handlers.rs  routers.rs
