[package]
name = "rust-avatar-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
pretty_env_logger = "0.5.0"
reqwest = "0.11"
url = "2.5.0"
bytes = "1.5.0"
